Fix bonus indicators being visible through table header

--- a/web/team-tasks.css
+++ b/web/team-tasks.css
@@ -40,6 +40,7 @@ table thead th {
     color: white;
     position: sticky;
     top: 0;
+    z-index: 1;
 }
 
 table thead th:nth-child(-n+6) {
